--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "homepage": "https://beobeosan.github.io/Portfolio";
+  "homepage": "https://beobeosan.github.io/Portfolio",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
   "dependencies": {
     "axios": "^1.6.7",
     "lucide-react": "^0.344.0",
